--- a/unsupervisedLearning.ipynb
+++ b/unsupervisedLearning.ipynb
@@ -2,332 +2,156 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Importing libraries\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.datasets import make_classification\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.ensemble import VotingClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.preprocessing import LabelEncoder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"./bankDataset/bank-full.csv\",sep = \";\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Encode data using LabelEncoder\n",
+    "for column in df.select_dtypes(include=['object']).columns:\n",
+    "    df[column] = LabelEncoder().fit_transform(df[column])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df.drop(\"y\",axis = 1)\n",
+    "y = df[\"y\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train,X_test,y_train_true,y_test_true = train_test_split(X,y,test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Division of into labeled and unlabeled\n",
+    "X_label,y_label = X_train[:400], y_train_true[:400]\n",
+    "X_unlabel = X_train[400:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SEMI-SUPERVISED ENSEMBLE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_12420/1906054789.py:1: DtypeWarning: Columns (16) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(\"./bankDataset/label_unlabel.csv\")\n"
+      "/usr/lib/python3/dist-packages/sklearn/base.py:413: UserWarning: X has feature names, but DecisionTreeClassifier was fitted without feature names\n",
+      "  warnings.warn(\n",
+      "/usr/lib/python3/dist-packages/sklearn/base.py:413: UserWarning: X has feature names, but SVC was fitted without feature names\n",
+      "  warnings.warn(\n"
      ]
     },
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>age</th>\n",
-       "      <th>job</th>\n",
-       "      <th>marital</th>\n",
-       "      <th>education</th>\n",
-       "      <th>default</th>\n",
-       "      <th>balance</th>\n",
-       "      <th>housing</th>\n",
-       "      <th>loan</th>\n",
-       "      <th>contact</th>\n",
-       "      <th>day</th>\n",
-       "      <th>month</th>\n",
-       "      <th>duration</th>\n",
-       "      <th>campaign</th>\n",
-       "      <th>pdays</th>\n",
-       "      <th>previous</th>\n",
-       "      <th>poutcome</th>\n",
-       "      <th>y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>54</td>\n",
-       "      <td>technician</td>\n",
-       "      <td>married</td>\n",
-       "      <td>secondary</td>\n",
-       "      <td>no</td>\n",
-       "      <td>-315</td>\n",
-       "      <td>no</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>cellular</td>\n",
-       "      <td>10</td>\n",
-       "      <td>jul</td>\n",
-       "      <td>2029</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>41</td>\n",
-       "      <td>blue-collar</td>\n",
-       "      <td>married</td>\n",
-       "      <td>primary</td>\n",
-       "      <td>no</td>\n",
-       "      <td>0</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>no</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>30</td>\n",
-       "      <td>may</td>\n",
-       "      <td>232</td>\n",
-       "      <td>3</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>no</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>58</td>\n",
-       "      <td>admin.</td>\n",
-       "      <td>divorced</td>\n",
-       "      <td>secondary</td>\n",
-       "      <td>no</td>\n",
-       "      <td>74</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>no</td>\n",
-       "      <td>telephone</td>\n",
-       "      <td>22</td>\n",
-       "      <td>jul</td>\n",
-       "      <td>514</td>\n",
-       "      <td>11</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>no</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>45</td>\n",
-       "      <td>management</td>\n",
-       "      <td>single</td>\n",
-       "      <td>secondary</td>\n",
-       "      <td>no</td>\n",
-       "      <td>5993</td>\n",
-       "      <td>no</td>\n",
-       "      <td>no</td>\n",
-       "      <td>cellular</td>\n",
-       "      <td>2</td>\n",
-       "      <td>jun</td>\n",
-       "      <td>116</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>no</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>33</td>\n",
-       "      <td>management</td>\n",
-       "      <td>married</td>\n",
-       "      <td>tertiary</td>\n",
-       "      <td>no</td>\n",
-       "      <td>2071</td>\n",
-       "      <td>no</td>\n",
-       "      <td>no</td>\n",
-       "      <td>cellular</td>\n",
-       "      <td>8</td>\n",
-       "      <td>aug</td>\n",
-       "      <td>106</td>\n",
-       "      <td>2</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>no</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45206</th>\n",
-       "      <td>76</td>\n",
-       "      <td>retired</td>\n",
-       "      <td>married</td>\n",
-       "      <td>tertiary</td>\n",
-       "      <td>no</td>\n",
-       "      <td>0</td>\n",
-       "      <td>no</td>\n",
-       "      <td>no</td>\n",
-       "      <td>telephone</td>\n",
-       "      <td>4</td>\n",
-       "      <td>feb</td>\n",
-       "      <td>92</td>\n",
-       "      <td>3</td>\n",
-       "      <td>169</td>\n",
-       "      <td>1</td>\n",
-       "      <td>failure</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45207</th>\n",
-       "      <td>29</td>\n",
-       "      <td>blue-collar</td>\n",
-       "      <td>single</td>\n",
-       "      <td>primary</td>\n",
-       "      <td>no</td>\n",
-       "      <td>269</td>\n",
-       "      <td>no</td>\n",
-       "      <td>no</td>\n",
-       "      <td>telephone</td>\n",
-       "      <td>6</td>\n",
-       "      <td>feb</td>\n",
-       "      <td>40</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45208</th>\n",
-       "      <td>59</td>\n",
-       "      <td>retired</td>\n",
-       "      <td>married</td>\n",
-       "      <td>primary</td>\n",
-       "      <td>no</td>\n",
-       "      <td>4949</td>\n",
-       "      <td>no</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>12</td>\n",
-       "      <td>jun</td>\n",
-       "      <td>168</td>\n",
-       "      <td>8</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45209</th>\n",
-       "      <td>35</td>\n",
-       "      <td>technician</td>\n",
-       "      <td>divorced</td>\n",
-       "      <td>secondary</td>\n",
-       "      <td>no</td>\n",
-       "      <td>2</td>\n",
-       "      <td>no</td>\n",
-       "      <td>no</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>3</td>\n",
-       "      <td>jul</td>\n",
-       "      <td>88</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45210</th>\n",
-       "      <td>29</td>\n",
-       "      <td>technician</td>\n",
-       "      <td>married</td>\n",
-       "      <td>secondary</td>\n",
-       "      <td>no</td>\n",
-       "      <td>444</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>no</td>\n",
-       "      <td>cellular</td>\n",
-       "      <td>21</td>\n",
-       "      <td>jul</td>\n",
-       "      <td>130</td>\n",
-       "      <td>4</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>45211 rows × 17 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       age          job   marital  education default  balance housing loan  \\\n",
-       "0       54   technician   married  secondary      no     -315      no  yes   \n",
-       "1       41  blue-collar   married    primary      no        0     yes   no   \n",
-       "2       58       admin.  divorced  secondary      no       74     yes   no   \n",
-       "3       45   management    single  secondary      no     5993      no   no   \n",
-       "4       33   management   married   tertiary      no     2071      no   no   \n",
-       "...    ...          ...       ...        ...     ...      ...     ...  ...   \n",
-       "45206   76      retired   married   tertiary      no        0      no   no   \n",
-       "45207   29  blue-collar    single    primary      no      269      no   no   \n",
-       "45208   59      retired   married    primary      no     4949      no  yes   \n",
-       "45209   35   technician  divorced  secondary      no        2      no   no   \n",
-       "45210   29   technician   married  secondary      no      444     yes   no   \n",
-       "\n",
-       "         contact  day month  duration  campaign  pdays  previous poutcome    y  \n",
-       "0       cellular   10   jul      2029         1     -1         0  unknown  yes  \n",
-       "1        unknown   30   may       232         3     -1         0  unknown   no  \n",
-       "2      telephone   22   jul       514        11     -1         0  unknown   no  \n",
-       "3       cellular    2   jun       116         1     -1         0  unknown   no  \n",
-       "4       cellular    8   aug       106         2     -1         0  unknown   no  \n",
-       "...          ...  ...   ...       ...       ...    ...       ...      ...  ...  \n",
-       "45206  telephone    4   feb        92         3    169         1  failure  NaN  \n",
-       "45207  telephone    6   feb        40         1     -1         0  unknown  NaN  \n",
-       "45208    unknown   12   jun       168         8     -1         0  unknown  NaN  \n",
-       "45209    unknown    3   jul        88         1     -1         0  unknown  NaN  \n",
-       "45210   cellular   21   jul       130         4     -1         0  unknown  NaN  \n",
-       "\n",
-       "[45211 rows x 17 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.8791330310737587\n"
+     ]
     }
    ],
    "source": [
-    "df = pd.read_csv(\"./bankDataset/label_unlabel.csv\")\n",
-    "df"
+    "tree_clf = DecisionTreeClassifier(random_state = 42)\n",
+    "svm_clf = SVC(probability=True, random_state=42)\n",
+    "\n",
+    "tree_clf.fit(X_label,y_label)\n",
+    "svm_clf.fit(X_label,y_label)\n",
+    "\n",
+    "# Pseudo-labeling on unlabeled data\n",
+    "pseudo_labels = np.array([tree_clf.predict(X_unlabel), svm_clf.predict(X_unlabel)])\n",
+    "confidence = np.max([tree_clf.predict_proba(X_unlabel), svm_clf.predict_proba(X_unlabel)], axis=0)\n",
+    "threshold = 0.75  # You can adjust this threshold\n",
+    "high_confidence = np.max(confidence, axis=1) > threshold\n",
+    "X_pseudo_labeled = X_unlabel[high_confidence]\n",
+    "y_pseudo_labeled = np.round(np.mean(pseudo_labels[:, high_confidence], axis=0)).astype(int)\n",
+    "\n",
+    "# Combine into an ensemble and retrain\n",
+    "ensemble_clf = VotingClassifier(estimators=[('dt', tree_clf), ('svm', svm_clf)], voting='soft')\n",
+    "\n",
+    "# Combine labeled and pseudo-labeled data\n",
+    "X_combined = np.vstack((X_label, X_pseudo_labeled))\n",
+    "y_combined = np.hstack((y_label, y_pseudo_labeled))\n",
+    "\n",
+    "ensemble_clf.fit(X_combined, y_combined)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "y_pred = ensemble_clf.predict(X_test)\n",
+    "print(\"Accuracy:\", accuracy_score(y_test_true, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## UNSUPERVISED PRE-TRAINED"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tensorflow'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[47], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mtf\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf"
    ]
   }
  ],
