--- a/unsupervisedLearning.ipynb
+++ b/unsupervisedLearning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,16 +76,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/lib/python3/dist-packages/sklearn/base.py:413: UserWarning: X has feature names, but DecisionTreeClassifier was fitted without feature names\n",
+      "/Users/wilfriedsankara/Library/Python/3.9/lib/python/site-packages/sklearn/base.py:432: UserWarning: X has feature names, but DecisionTreeClassifier was fitted without feature names\n",
       "  warnings.warn(\n",
-      "/usr/lib/python3/dist-packages/sklearn/base.py:413: UserWarning: X has feature names, but SVC was fitted without feature names\n",
+      "/Users/wilfriedsankara/Library/Python/3.9/lib/python/site-packages/sklearn/base.py:432: UserWarning: X has feature names, but SVC was fitted without feature names\n",
       "  warnings.warn(\n"
      ]
     },
@@ -135,23 +135,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neural_network import BernoulliRBM\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "import tensorflow as tf\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'tensorflow'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[47], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mtf\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wilfriedsankara/Library/Python/3.9/lib/python/site-packages/sklearn/base.py:439: UserWarning: X does not have valid feature names, but BernoulliRBM was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[BernoulliRBM] Iteration 1, pseudo-likelihood = -1449854150.61, time = 0.37s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wilfriedsankara/Library/Python/3.9/lib/python/site-packages/sklearn/base.py:439: UserWarning: X does not have valid feature names, but BernoulliRBM was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[BernoulliRBM] Iteration 2, pseudo-likelihood = -2899872175.87, time = 0.48s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wilfriedsankara/Library/Python/3.9/lib/python/site-packages/sklearn/base.py:439: UserWarning: X does not have valid feature names, but BernoulliRBM was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[BernoulliRBM] Iteration 3, pseudo-likelihood = -4349890201.33, time = 0.44s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wilfriedsankara/Library/Python/3.9/lib/python/site-packages/sklearn/base.py:439: UserWarning: X does not have valid feature names, but BernoulliRBM was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[BernoulliRBM] Iteration 4, pseudo-likelihood = -5799908224.11, time = 0.43s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wilfriedsankara/Library/Python/3.9/lib/python/site-packages/sklearn/base.py:439: UserWarning: X does not have valid feature names, but BernoulliRBM was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[BernoulliRBM] Iteration 5, pseudo-likelihood = -7249926249.90, time = 0.43s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wilfriedsankara/Library/Python/3.9/lib/python/site-packages/sklearn/base.py:439: UserWarning: X does not have valid feature names, but BernoulliRBM was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[BernoulliRBM] Iteration 6, pseudo-likelihood = -8699944271.87, time = 0.43s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wilfriedsankara/Library/Python/3.9/lib/python/site-packages/sklearn/base.py:439: UserWarning: X does not have valid feature names, but BernoulliRBM was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[BernoulliRBM] Iteration 7, pseudo-likelihood = -10149962297.19, time = 0.44s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wilfriedsankara/Library/Python/3.9/lib/python/site-packages/sklearn/base.py:439: UserWarning: X does not have valid feature names, but BernoulliRBM was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[BernoulliRBM] Iteration 8, pseudo-likelihood = -11599980320.71, time = 0.47s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wilfriedsankara/Library/Python/3.9/lib/python/site-packages/sklearn/base.py:439: UserWarning: X does not have valid feature names, but BernoulliRBM was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[BernoulliRBM] Iteration 9, pseudo-likelihood = -13049998346.06, time = 0.44s\n",
+      "[BernoulliRBM] Iteration 10, pseudo-likelihood = -14500016369.73, time = 0.43s\n",
+      "Epoch 1/10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wilfriedsankara/Library/Python/3.9/lib/python/site-packages/sklearn/base.py:439: UserWarning: X does not have valid feature names, but BernoulliRBM was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10/10 [==============================] - 1s 17ms/step - loss: 0.1203 - accuracy: 0.8906 - val_loss: 0.1124 - val_accuracy: 0.9000\n",
+      "Epoch 2/10\n",
+      "10/10 [==============================] - 0s 3ms/step - loss: 0.1125 - accuracy: 0.8906 - val_loss: 0.1124 - val_accuracy: 0.9000\n",
+      "Epoch 3/10\n",
+      "10/10 [==============================] - 0s 3ms/step - loss: 0.1131 - accuracy: 0.8906 - val_loss: 0.1121 - val_accuracy: 0.9000\n",
+      "Epoch 4/10\n",
+      "10/10 [==============================] - 0s 3ms/step - loss: 0.1123 - accuracy: 0.8906 - val_loss: 0.1114 - val_accuracy: 0.9000\n",
+      "Epoch 5/10\n",
+      "10/10 [==============================] - 0s 3ms/step - loss: 0.1115 - accuracy: 0.8906 - val_loss: 0.1111 - val_accuracy: 0.9000\n",
+      "Epoch 6/10\n",
+      "10/10 [==============================] - 0s 3ms/step - loss: 0.1115 - accuracy: 0.8906 - val_loss: 0.1109 - val_accuracy: 0.9000\n",
+      "Epoch 7/10\n",
+      "10/10 [==============================] - 0s 3ms/step - loss: 0.1110 - accuracy: 0.8906 - val_loss: 0.1103 - val_accuracy: 0.9000\n",
+      "Epoch 8/10\n",
+      "10/10 [==============================] - 0s 3ms/step - loss: 0.1107 - accuracy: 0.8906 - val_loss: 0.1098 - val_accuracy: 0.9000\n",
+      "Epoch 9/10\n",
+      "10/10 [==============================] - 0s 3ms/step - loss: 0.1105 - accuracy: 0.8906 - val_loss: 0.1094 - val_accuracy: 0.9000\n",
+      "Epoch 10/10\n",
+      "10/10 [==============================] - 0s 3ms/step - loss: 0.1104 - accuracy: 0.8906 - val_loss: 0.1093 - val_accuracy: 0.9000\n",
+      "13/13 [==============================] - 0s 758us/step - loss: 0.1100 - accuracy: 0.8925\n",
+      "Accuracy: 0.8924999833106995\n"
      ]
     }
    ],
    "source": [
-    "import tensorflow as tf"
+    "rbm = BernoulliRBM(n_components=100, learning_rate=0.1, batch_size=10, n_iter =10, verbose = True, random_state=42)\n",
+    "\n",
+    "rbm.fit(X_unlabel)\n",
+    "\n",
+    "X_label_rbm = rbm.transform(X_label)\n",
+    "\n",
+    "model = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Dense(10, activation=\"relu\"),\n",
+    "    tf.keras.layers.Dense(1, activation = 'sigmoid')\n",
+    "])\n",
+    "\n",
+    "model.compile(optimizer = \"adam\", loss = \"mse\",metrics = [\"accuracy\"])\n",
+    "model.fit(X_label_rbm, y_label, epochs=10, batch_size=32, validation_split=0.2)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "loss, accuracy = model.evaluate(X_label_rbm, y_label)\n",
+    "print(\"Accuracy:\", accuracy)"
    ]
   }
  ],
@@ -171,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
